go-rockme/deploy/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx-svc
spec:
  selector:
    app: nginx-dc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
