go-rockme/deploy/rockme-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rockme-svc
  labels:
    app: rockme-svc
spec:
  selector:
    app: rockme
  ports:
    - protocol: TCP
      port: 8500
      targetPort: 8500
